--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dontate-today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!--start top-section-->
 
-    <section>
-        <div>
-            <h1>Let’s Help Those Who Are </h1>
-            <h1>More In Need</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
-            <button type="button">Donate Now</button>
+    <section class="top-banner">
+        <div class="container">
+            <div class="content">
+                <h1>Let’s Help Those Who Are More In Need</h1>
+                <p>The support will benefit affected and displaced people.With many people having lost their family
+                    members, homes, belongings and sources of livelihoods, the humanitarian situation is grave and
+                    expected to worsen in the upcoming days</p>
+                <a href="">Donate Now</a>
+            </div>
         </div>
     </section>
     <!--end top-section-->
