section 2 is incomplate

--- a/index.html
+++ b/index.html
@@ -27,7 +27,40 @@
             </div>
         </div>
     </section>
+
     <!--end top-section-->
+
+    <!--Start Donate Today-->
+    <section class="donate-hare">
+        <div class="container2">
+            <div class="donate-for">
+                <h2>Donate Today</h2>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+            </div>
+        </div>
+        <div class="price-list">
+            <div class="first-package">
+                <p>100tk</p>
+            </div>
+            <div class="second-package">
+                <p>200tk</p>
+            </div>
+            <div class="threed-package">
+                <p>500tk</p>
+            </div>
+            <div class="fourth-package">
+                <p>1000tk</p>
+            </div>
+            <div class="five-package">
+                <p>5000tk</p>
+            </div>
+        </div>
+        <div>
+            <input type="text" placeholder="Other Amount (Taka)">
+        </div>
+    </section>
+    <!--End Donate Today-->
 
 </body>
 
