section 2nd finished

--- a/index.html
+++ b/index.html
@@ -56,11 +56,28 @@
                 <p>5000tk</p>
             </div>
         </div>
-        <div>
-            <input type="text" placeholder="Other Amount (Taka)">
+        <div class="Other-amount">
+            <div class="choose-price">
+                <input type="text" placeholder="Other Amount (Taka)">
+            </div>
+        </div>
+        <div class="horizontal-line"></div>
+        <div class="donate-now">
+            <a href="#">Donate Now</a>
         </div>
     </section>
     <!--End Donate Today-->
+
+
+    <!--start footer-->
+    <footer>
+        <div class="footer-content">
+            <div class="be-humble">
+                <h3>Be Humble</h3>
+                <p>I’m gonna do it</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
