complated relife goods photo part

--- a/index.html
+++ b/index.html
@@ -68,6 +68,83 @@
     </section>
     <!--End Donate Today-->
 
+    <!--start our donate plan-->
+
+    <section>
+        <div class="our-donation">
+            <div class="our-donation-plan">
+                <h1>Our Donate Plan</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+            </div>
+        </div>
+
+    </section>
+    <section>
+        <div class="all-plan">
+            <div class="plan">
+                <img src="images/food.png">
+                <h4>Food for a family</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="plan">
+                <img src="images/shelter for a family.png">
+                <h4>Shelter for a family</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="plan">
+                <img src="images/education.png">
+                <h4>Education for a child</h4>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
+    <!--end our donate plan-->
+    <!--relief goods start-->
+    <section>
+        <div class="their-lives">
+            <div class="depend">
+                <h1>Their lives depend on your donation</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    <br><br>
+                    noluisse, enimLorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset
+                </p>
+                <a href="#">How to Contribute?</a>
+            </div>
+            <div class="want-relief">
+                <img src="images/relief-goods.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!--end relief goods -->
+
+    <!--start donate payment mathod-->
+
+    <section>
+        <form action="#">
+            <h1>Please Donate Here</h1>
+            <label for="doner-first-name">Doner First name:</label>
+            <input class="box1" type="text" name="doner-first-name" id="doner-first-name"
+                placeholder="Enter Your First Name">
+            <label for="doner-last-name">Doner First name:</label>
+            <input class="box1" type="text" name="doner-last-name" id="doner-last-name"
+                placeholder="Enter Your Last Name">
+            <label for="peamil">Email:</label>
+            <input class="box1" type="email" name="peamil" id="peamil" placeholder="Enter Your Email">
+            <label for="cardnum">Card Number:</label>
+            <input class="box1" type="number" name="cardnum" id="cardnum" placeholder="1234 1234 1234 1234">
+            <label for="damount">Total Amount</label>
+            <input type="number" name="damount" id="damount" placeholder="Enter Amount">
+            <button type="button">Donate Here</button>
+
+
+        </form>
+    </section>
+    <!--end donation-->
 
     <!--start footer-->
     <footer>
