complated get my updates

--- a/index.html
+++ b/index.html
@@ -121,30 +121,36 @@
         </div>
     </section>
     <!--end relief goods -->
-
-    <!--start donate payment mathod-->
-
+    <!-- start servive-->
     <section>
-        <form action="#">
-            <h1>Please Donate Here</h1>
-            <label for="doner-first-name">Doner First name:</label>
-            <input class="box1" type="text" name="doner-first-name" id="doner-first-name"
-                placeholder="Enter Your First Name">
-            <label for="doner-last-name">Doner First name:</label>
-            <input class="box1" type="text" name="doner-last-name" id="doner-last-name"
-                placeholder="Enter Your Last Name">
-            <label for="peamil">Email:</label>
-            <input class="box1" type="email" name="peamil" id="peamil" placeholder="Enter Your Email">
-            <label for="cardnum">Card Number:</label>
-            <input class="box1" type="number" name="cardnum" id="cardnum" placeholder="1234 1234 1234 1234">
-            <label for="damount">Total Amount</label>
-            <input type="number" name="damount" id="damount" placeholder="Enter Amount">
-            <button type="button">Donate Here</button>
-
-
-        </form>
+        <div class="they-need">
+            <div class="need-survive">
+                <img src="images/they needs to servive.png" alt="">
+            </div>
+            <div class="survive">
+                <h1>They need us to suvive</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    <br><br>
+                    noluisse, enimLorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset
+                </p>
+                <a href="#">How to Contribute?</a>
+            </div>
+        </div>
     </section>
-    <!--end donation-->
+    <!-- end servive-->
+    <!--start Get My Updates-->
+    <section>
+        <div class="get-my">
+            <div class="updates">
+                <h1>Get My Updates</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+            </div>
+        </div>
+    </section>
+
+    <!--end Get My Updates-->
 
     <!--start footer-->
     <footer>
