complated this project

--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
 
     <!--end top-section-->
 
+
+
+
     <!--Start Donate Today-->
-    <section class="donate-hare">
-        <div class="container2">
-            <div class="donate-for">
+    <section class="start-donate">
+        <div class="donate-here">
+            <div class="content2">
                 <h2>Donate Today</h2>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
+                    populo
                     animal noluisse, enim</p>
             </div>
         </div>
@@ -104,7 +108,7 @@
     </section>
     <!--end our donate plan-->
     <!--relief goods start-->
-    <section>
+    <section class="their">
         <div class="their-lives">
             <div class="depend">
                 <h1>Their lives depend on your donation</h1>
@@ -122,7 +126,7 @@
     </section>
     <!--end relief goods -->
     <!-- start servive-->
-    <section>
+    <section class="they">
         <div class="they-need">
             <div class="need-survive">
                 <img src="images/they needs to servive.png" alt="">
@@ -149,8 +153,32 @@
             </div>
         </div>
     </section>
-
     <!--end Get My Updates-->
+
+    <!--start subcribe form-->
+    <section>
+        <div class="subcribe">
+            <div class="form-here">
+                <form action="#">
+                    <label for="fname">First name:</label>
+                    <input class="input-width" type="text" name="fname" id="fname"
+                        placeholder="Enter Your First Name"><br><br>
+                    <label for="lname">Last name:</label>
+                    <input class="input-width" type="text" name="lname" id="lname"
+                        placeholder="Enter Your Last Name"><br><br>
+                    <label for="email">Email:</label>
+                    <input class="input-width" type="email" name="email" id="email"
+                        placeholder="Enter your email account"><br><br>
+                    <label for="pword">Create a password:</label>
+                    <input class="input-width" type="password" name="pword" id="pword"
+                        placeholder="type a new password"><br><br>
+                </form>
+                <a href="#">Subscribe</a>
+            </div>
+        </div>
+    </section>
+
+    <!--end subcribe form-->
 
     <!--start footer-->
     <footer>
