--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <!--start top-section-->
 
     <section class="top-banner">
@@ -30,10 +31,8 @@
 
     <!--end top-section-->
 
-
-
-
     <!--Start Donate Today-->
+
     <section class="start-donate">
         <div class="donate-here">
             <div class="content2">
@@ -73,7 +72,6 @@
     <!--End Donate Today-->
 
     <!--start our donate plan-->
-
     <section>
         <div class="our-donation">
             <div class="our-donation-plan">
@@ -107,6 +105,7 @@
         </div>
     </section>
     <!--end our donate plan-->
+
     <!--relief goods start-->
     <section class="their">
         <div class="their-lives">
@@ -125,6 +124,7 @@
         </div>
     </section>
     <!--end relief goods -->
+
     <!-- start servive-->
     <section class="they">
         <div class="they-need">
@@ -143,7 +143,8 @@
         </div>
     </section>
     <!-- end servive-->
-    <!--start Get My Updates-->
+
+    <!--start get my updates-->
     <section>
         <div class="get-my">
             <div class="updates">
@@ -153,7 +154,7 @@
             </div>
         </div>
     </section>
-    <!--end Get My Updates-->
+    <!--end get my updates-->
 
     <!--start subcribe form-->
     <section>
@@ -177,7 +178,6 @@
             </div>
         </div>
     </section>
-
     <!--end subcribe form-->
 
     <!--start footer-->
@@ -189,7 +189,7 @@
             </div>
         </div>
     </footer>
-
+    <!--end footer-->
 </body>
 
 </html>
